# captcha

./: .env  Cargo.toml  README.md  index.php
src/: _char_boxing.rs  main.rs
src/v1/: app_state.rs  captcha.rs  consts.rs  error_msg.rs  filter.rs  mod.rs  msg.rs  response.rs  routes.rs
